--- a/src/app/shop/components/shop-item-form/shop-item-form.component.css
+++ b/src/app/shop/components/shop-item-form/shop-item-form.component.css
@@ -1,7 +1,7 @@
-input.ng-valid[required] {
-  border-left: 5px solid #ffffff; /* green */
+.standard {
+  width: 80%
 }
 
-input.ng-invalid {
-  border-left: 5px solid #ffffff; /* red */
+.large {
+  width: 100%
 }
