--- a/src/app/shop/components/shop-item-form/shop-item-form.component.html
+++ b/src/app/shop/components/shop-item-form/shop-item-form.component.html
@@ -1,72 +1,78 @@
-<h1 mat-dialog-title>Title</h1>
+<div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
+    <h4>Form</h4>
+    <button mat-icon-button [mat-dialog-close]>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
 <div mat-dialog-content>
-  <form novalidate [formGroup]="shopItemForm">
-      <div fxLayout="column">
-          <div fxFlex>
-            <!-- Fields -->
-            <div fxLayout="row" fxLayoutAlign="space-around center">
-                <div fxFlex="50%">
-                    <div fxLayout="column" fxLayoutAlign="space-around">
-                        <div fxFlex>
-                            <mat-form-field>
-                                <input matInput placeholder="ID" formControlName="_id">
-                                <mat-error *ngIf="validation.check('_id').result">
-                                    {{validation.check('_id').message}}
-                                </mat-error>
-                            </mat-form-field>
-                        </div>
-                        <div fxFlex>
-                            <mat-form-field>
-                                <input matInput placeholder="Product Name" formControlName="name" required>
-                                <mat-error *ngIf="validation.check('name').result">
-                                    {{validation.check('name').message}}
-                                </mat-error>
-                            </mat-form-field>
-                        </div>
-                        <div fxFlex>
-                            <mat-form-field>
-                                <input matInput placeholder="Product Code" placeholder="e.g. KPX-285C" formControlName="code" required>
-                                <mat-error *ngIf="validation.check('code').result">
-                                    {{validation.check('code').message}}
-                                </mat-error>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                </div>
-                <div fxFlex="50%">
-                    <div fxLayout="column" fxLayoutAlign="space-around">
-                        <div fxFlex>
-                            <mat-form-field>
-                                <input matInput placeholder="Unit Price" formControlName="unitPrice" required>
-                                <mat-error *ngIf="validation.check('unitPrice').result">
-                                {{validation.check('unitPrice').message}}
-                                </mat-error>
-                            </mat-form-field>
-                        </div>
-                        <div fxFlex>
-                            <mat-form-field>
-                                <input matInput placeholder="Quantity In Stock" formControlName="quantityInStock" required>
-                                <mat-error *ngIf="validation.check('quantityInStock').result">
-                                    {{validation.check('quantityInStock').message}}
-                                </mat-error>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                </div>
+    <form fxLayout="column" novalidate [formGroup]="shopItemForm">
+        <div fxLayout="row" fxLayoutAlign="center">
+            <div fxFlex="50%">
+                <mat-form-field class="standard">
+                    <input
+                        matInput placeholder="ID"
+                        formControlName="_id">
+                    <mat-error *ngIf="validation.check('_id').result">
+                        {{validation.check('_id').message}}
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="standard">
+                    <input
+                        matInput placeholder="Product Name"
+                        formControlName="name"
+                        required>
+                    <mat-error *ngIf="validation.check('name').result">
+                        {{validation.check('name').message}}
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="standard">
+                    <input 
+                        matInput placeholder="Product Code" 
+                        placeholder="e.g. KPX-285C"
+                        formControlName="code"
+                        required>
+                    <mat-error *ngIf="validation.check('code').result">
+                        {{validation.check('code').message}}
+                    </mat-error>
+                </mat-form-field>
             </div>
-          </div>
-          <div fxFlex>
-            <mat-form-field>
-              <input matInput placeholder="Description" placeholder="a brief description of the product" formControlName="description">
-              <mat-error *ngIf="validation.check('description').result">
+            <div fxFlex="50%">
+                <mat-form-field class="standard">
+                    <input
+                        matInput placeholder="Unit Price"
+                        formControlName="unitPrice"
+                        required>
+                    <mat-error *ngIf="validation.check('unitPrice').result">
+                        {{validation.check('unitPrice').message}}
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="standard">
+                    <input
+                        matInput placeholder="Quantity In Stock"
+                        formControlName="quantityInStock"
+                        required>
+                    <mat-error *ngIf="validation.check('quantityInStock').result">
+                        {{validation.check('quantityInStock').message}}
+                    </mat-error>
+                </mat-form-field>
+            </div>
+        </div>
+        <mat-form-field fxFlex class="large">
+            <textarea 
+                matInput
+                placeholder="A brief description of the product"
+                matTextareaAutosize
+                matAutosizeMinRows="3"
+                matAutosizeMaxRows="5"
+                formControlName="description">
+            </textarea>
+            <mat-error *ngIf="validation.check('description').result">
                 {{validation.check('description').message}}
-              </mat-error>
-            </mat-form-field>            
-          </div>  
-          <div fxFlex>
-              <button mat-button [mat-dialog-close]="data.animal">Ok</button>
-              <button mat-button (click)="onNoClick()">Cancel</button>
-              <button mat-button (click)="submitItem(shopItemForm)">Save</button> <!-- [disabled]="!shopItemForm.valid" -->          </div>          
-          </div>
+            </mat-error>
+        </mat-form-field>            
+        <div fxLayout="row" fxLayoutAlign="end">
+            <button mat-button (click)="onNoClick()">Cancel</button>
+            <button mat-button (click)="submitItem(shopItemForm)">Save</button> <!-- [disabled]="!shopItemForm.valid" -->
+        </div>          
     </form>
 </div>
