review date fixes

--- a/src/app/shop/components/shop-item-detail/shop-item-detail.component.html
+++ b/src/app/shop/components/shop-item-detail/shop-item-detail.component.html
@@ -76,7 +76,7 @@
                         [cancel]="false"
                         readonly="true">
                     </p-rating>
-                    <p>10 days ago</p>- by {{shopItemReview.userId}}
+                    <p>{{shopItemReview.reviewDate}}</p>- by {{shopItemReview.userId}}
                 </div>
             </div>
             <!-- Remarks -->
