--- a/src/app/shop/components/shop-item-list/shop-item-list.component.html
+++ b/src/app/shop/components/shop-item-list/shop-item-list.component.html
@@ -3,15 +3,31 @@
         <mat-icon>search</mat-icon>
     </a>
     <mat-form-field class="search-form-field">
-        <input matInput type="text" placeholder="Search for..." [(ngModel)]="filterBy"/>
-        <button mat-button *ngIf="filterBy" matSuffix mat-icon-button aria-label="Clear" (click)="filterBy=''">
+        <input
+            matInput
+            type="text"
+            placeholder="Search for..."
+            [(ngModel)]="filterBy"/>
+        <button
+            mat-button
+            *ngIf="filterBy"
+            matSuffix
+            mat-icon-button
+            aria-label="Clear"
+            (click)="filterBy=''">
             <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
-    <button mat-icon-button (click)="openDialog()" [disabled]='!auth.isUserAdmin()'>
+    <button
+        mat-icon-button
+        (click)="openDialog()"
+        [disabled]='!auth.isUserAdmin()'>
         <mat-icon>add</mat-icon>
     </button>
-    <a mat-icon-button [routerLink]="['/cart', auth.authenticatedUserId]" [disabled]='!auth.isLoggedIn() || auth.isUserAdmin()'>
+    <a
+        mat-icon-button
+        [routerLink]="['/cart', auth.authenticatedUserId]"
+        [disabled]='!auth.isLoggedIn() || auth.isUserAdmin()'>
         <mat-icon>shopping_cart</mat-icon>
     </a>
 </div>
@@ -42,7 +58,11 @@
             </mat-card-content>
             <mat-card-actions>
                 <mat-toolbar>
-                    <p-rating [(ngModel)]="shopItem.rating" [cancel]="false" readonly="true"></p-rating>
+                    <p-rating 
+                        [(ngModel)]="shopItem.rating"
+                        [cancel]="false"
+                        readonly="true">
+                    </p-rating>
                     <span class="flex-fill-remaining-space"></span>
                     <mat-chip-list>
                         <mat-chip>{{shopItem.reviewsCount}} reviews</mat-chip>
@@ -50,7 +70,10 @@
                 </mat-toolbar>
             </mat-card-actions>
             <mat-card-actions align="end">
-                <button mat-icon-button (click)='addToCart(shopItem)' [disabled]='!auth.isLoggedIn() || auth.isUserAdmin()'>
+                <button
+                    mat-icon-button
+                    (click)='addToCart(shopItem)'
+                    [disabled]='!auth.isLoggedIn() || auth.isUserAdmin()'>
                     <mat-icon>add_shopping_cart</mat-icon>
                     {{shopItem.cartCount}}
                 </button> 
@@ -58,10 +81,13 @@
                     <mat-icon>info_outline</mat-icon>
                 </a>
                 <span class="flex-fill-remaining-space"></span>
-                <button mat-icon-button (click)="openDialog(shopItem)" [disabled]='!auth.isUserAdmin()'>
+                <button
+                    mat-icon-button
+                    (click)="openDialog(shopItem)"
+                    [disabled]='!auth.isUserAdmin()'>
                     <mat-icon>open_in_new</mat-icon>
                 </button>
             </mat-card-actions>
-            </mat-card>
+        </mat-card>
     </mat-grid-tile>
 </mat-grid-list>
