--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import '../node_modules/primeng/resources/primeng.min.css';
 @import '../node_modules/primeng/resources/themes/omega/theme.css';
 @import '../src/assets/css/font-awesome.min.css';
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
